--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
-node_modules
+#dependencies
+/node_modules
+/.pnp
+.pnp.js
 .next
 .next/
+
+#local env
+.env*.local
+.env
+
+#debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+#vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
